fixed alignment/spacing

--- a/ui/components/app/flask/snap-install-warning/index.scss
+++ b/ui/components/app/flask/snap-install-warning/index.scss
@@ -1,12 +1,6 @@
 .snap-install-warning {
   .popover-header {
-    .mm-text {
-      margin-left: auto;
-    }
-
-    .mm-button-icon {
-      margin-left: auto;
-    }
+    padding-bottom: 0px;
   }
 
   .checkbox-label {
